# ft_linear_regression

./: .coverage  .gitignore  .pre-commit-config.yaml  .vulture-whitelist.py  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  coverage.json  data.csv  data_anscombe_I.csv  data_anscombe_II.csv  data_anscombe_III.csv  data_circle.csv  data_dots.csv  data_duplicate.csv  data_flat.csv  data_high_lines.csv  data_nonlinear.csv  data_star.csv  data_v_lines.csv  data_wide_lines.csv  data_x_shape.csv  log.txt  mutmut-results.txt  pyproject.toml  theta.json  theta_data_anscombe_I.json  theta_data_anscombe_II.json  theta_data_anscombe_III.json  theta_data_anscombe_IV.json  theta_data_away.json  theta_data_bullseye.json  theta_data_circle.json  theta_data_collinear.json  theta_data_dino.json  theta_data_dots.json  theta_data_duplicate.json  theta_data_flat.json  (+15 more)
.github/workflows/: ci.yml
data/benchmarks/: data_anscombe_IV.csv  data_away.csv  data_bullseye.csv  data_collinear.csv  data_dino.csv  data_h_lines.csv  data_inverse.csv  (+9 more)
docs/: WBS_ft_linear_regression.md  confidence_band.md  ft_linear_regression_checklist_défense-proof.txt  ft_linear_regression_murphy_law.txt  regression_lineaire.md
mutants/: mutmut-stats.json
src/: linear_regression.py  metrics.py  viz.py
tests/: test_accuracy_main.py  test_cli.py  test_cli_parsers.py  test_data_parsing.py  test_e2e.py  test_estimate_price.py  test_gradient.py  test_gradient_descent.py  test_json.py  test_main_modules.py  test_metrics.py  test_predict_logic.py  test_read_data.py  test_viz.py
workflows/: ci.yml
(+14 files in other folders)
